--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "description": "Netguru Node.JS REST API starter app",
-  "keywords": ["node", "starter", "rest", "api", "netguru", "swagger"],
+  "keywords": [
+    "node",
+    "starter",
+    "rest",
+    "api",
+    "netguru",
+    "swagger"
+  ],
   "author": {
     "name": "Netguru",
     "email": "nodejs@netguru.co",
@@ -13,8 +20,8 @@
     "node": "6.9.4"
   },
   "bugs": {
-    "url" : "https://github.com/netguru/ng-node-starter-app/issues",
-    "email" : "nodejs@netguru.co"
+    "url": "https://github.com/netguru/ng-node-starter-app/issues",
+    "email": "nodejs@netguru.co"
   },
   "contributors": [
     "Justyna Rachowicz <justyna.rachowicz@netguru.co> (https://github.com/mrowa44)",
@@ -29,8 +36,9 @@
     "url": "https://github.com/netguru/ng-node-starter-app.git"
   },
   "dependencies": {
-    "bunyan": "^1.8.5",
     "bcrypt": "^1.0.2",
+    "bunyan": "^1.8.5",
+    "bunyan-prettystream": "^0.1.3",
     "compose-middleware": "^2.2.0",
     "dotenv": "^4.0.0",
     "express": "^4.12.3",
