Remove nodemon, add PM2

--- a/.env.development.example
+++ b/.env.development.example
@@ -4,3 +4,5 @@ DB_DATABASE=database_development
 DB_HOST=127.0.0.1
 JWT_TOKEN=secret
 TOKEN_EXPIRATION_TIME=604800000
+KEYMETRICS_PUBLIC=
+KEYMETRICS_SECRET=
