--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "supertest": "^1.0.0"
   },
   "scripts": {
+    "edit": "swagger project edit",
     "lint": "eslint .",
     "start": "pm2 start pm2-process-dev.json",
     "start:prod": "pm2 start pm2-process-staging.json",
